# batch-manager

./: deploy-process_batch.sh  pyproject.toml
scripts/faux_event/: main.py  requirements.txt
