[project]
name = "batch-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "firebase-admin>=6.7.0",
    "functions-framework>=3.8.2",
    "google-cloud-firestore>=2.20.2",
    "google-cloud-tasks>=2.19.2",
    "google-events>=0.14.0",
    "pyfarmhash>=0.4.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.399",
]
